Fix a typo in index page p tag

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <!-- Section 2 -->
     <div class="section2" id="section2">
         <h2 id="section2Text">I'm Learning Web Development!</h2>
-        <p>I’m learning web development with <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>, working to create great web experiences. Follow along as I grow my skills and build something awesome.</p>
+        <p>I’m learning web development with <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>, working to create great web applications. Follow along as I grow my skills and build something awesome.</p>
         
         <!-- GIF Embed -->
         <div class="gif-container">
