--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         }
 
         .scroll-indicator {
-            position: absolute;
-            bottom: 20px;
+            margin-top: 20px;
             cursor: pointer;
         }
 
@@ -58,13 +57,15 @@
             width: 50px;
             height: 50px;
             fill: white;
-            margin-bottom: 10px;
             transition: transform 0.3s ease;
+            margin-top: 20px;
         }
 
         @media (max-width: 768px) {
             .scroll-indicator svg {
                 transform: translateY(-10px);
+                width: 40px;
+                height: 40px;
             }
 
             .section h1 {
@@ -75,24 +76,24 @@
                 width: 35vw;
             }
 
-            .gif-container img {
-                max-width: 40vw; /* Adjust size for smaller screens */
-            }
-
             .section2 h2 {
-                font-size: 2.5rem;
+                font-size: 2.2rem; /* Adjusted size */
             }
 
             .section2 p {
-                font-size: 1.2rem;
+                font-size: 1.2rem; /* Adjusted size */
+            }
+
+            .gif-container img {
+                max-width: 40vw; /* Adjust size for smaller screens */
             }
         }
 
         @media (max-width: 480px) {
             .scroll-indicator svg {
                 transform: translateY(-20px);
-                width: 40px;
-                height: 40px;
+                width: 35px;
+                height: 35px;
             }
 
             .section h1 {
@@ -103,16 +104,16 @@
                 width: 30vw;
             }
 
-            .gif-container img {
-                max-width: 30vw; /* Further adjust size for very small screens */
-            }
-
             .section2 h2 {
-                font-size: 2rem;
+                font-size: 1.8rem; /* Further reduced size */
             }
 
             .section2 p {
-                font-size: 1rem;
+                font-size: 1rem; /* Further reduced size */
+            }
+
+            .gif-container img {
+                max-width: 30vw; /* Further adjusted size */
             }
         }
 
@@ -165,7 +166,7 @@
     <!-- Section 2 -->
     <div class="section2" id="section2">
         <h2 id="section2Text">I'm Learning Web Development!</h2>
-        <p>I’m learning web development with <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>, working to create great web applications. Follow along as I grow my skills and build something awesome. 😇</p>
+        <p>I’m learning web development with <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>, working to create great web applications. Follow along as I grow my skills and build something awesome.</p>
         
         <!-- GIF Embed -->
         <div class="gif-container">
