--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
 
         .section h1 {
-            font-size: 4rem;
+            font-size: clamp(2rem, 4vw, 4rem); /* Adjusted for better responsiveness */
             margin: 0;
             color: #fff;
             font-weight: bold;
@@ -41,7 +41,7 @@
         }
 
         .section img {
-            width: 40vw;
+            width: clamp(20vw, 30%, 40vw);
             max-width: 200px;
             height: auto;
             border-radius: 50%;
@@ -54,82 +54,30 @@
         }
 
         .scroll-indicator svg {
-            width: 50px;
-            height: 50px;
+            width: clamp(30px, 5vw, 50px);
+            height: clamp(30px, 5vw, 50px);
             fill: white;
             transition: transform 0.3s ease;
             margin-top: 20px;
         }
 
-        @media (max-width: 768px) {
-            .scroll-indicator svg {
-                transform: translateY(-10px);
-                width: 40px;
-                height: 40px;
-            }
-
-            .section h1 {
-                font-size: 3.5rem;
-            }
-
-            .section img {
-                width: 35vw;
-            }
-
-            .section2 h2 {
-                font-size: 2.2rem; /* Adjusted size */
-            }
-
-            .section2 p {
-                font-size: 1.2rem; /* Adjusted size */
-            }
-
-            .gif-container img {
-                max-width: 40vw; /* Adjust size for smaller screens */
-            }
-        }
-
-        @media (max-width: 480px) {
-            .scroll-indicator svg {
-                transform: translateY(-20px);
-                width: 35px;
-                height: 35px;
-            }
-
-            .section h1 {
-                font-size: 3rem;
-            }
-
-            .section img {
-                width: 30vw;
-            }
-
-            .section2 h2 {
-                font-size: 1.8rem; /* Further reduced size */
-            }
-
-            .section2 p {
-                font-size: 1rem; /* Further reduced size */
-            }
-
-            .gif-container img {
-                max-width: 30vw; /* Further adjusted size */
-            }
-        }
-
         .section2 h2 {
-            font-size: 3rem;
+            font-size: clamp(1.5rem, 4vw, 3rem); /* Adjusted for better responsiveness */
             margin-bottom: 1rem;
             color: skyblue;
             text-align: center;
+            white-space: nowrap; /* Prevent text from wrapping */
+            overflow: hidden; /* Hide overflow text */
+            text-overflow: ellipsis; /* Add ellipsis if text overflows */
         }
 
         .section2 p {
-            font-size: 1.5rem;
+            font-size: clamp(1rem, 2vw, 1.5rem); /* Adjusted for better responsiveness */
             line-height: 1.6;
             color: #aaa;
             max-width: 800px;
             text-align: center;
+            margin: 0 20px; /* Ensure padding on smaller screens */
         }
 
         .section2 a {
@@ -141,11 +89,20 @@
             text-decoration: underline;
         }
 
-        .gif-container img {
+        .gif-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 100%;
             height: auto;
-            max-width: 50vw; /* Set the maximum width relative to viewport width */
             margin-top: 20px;
+        }
+
+        .gif-container img {
+            width: clamp(20vw, 30%, 40vw); /* Adjusted for better responsiveness */
+            height: auto;
+            max-width: 300px; /* Adjusted to make the GIF slightly smaller on PC screens */
+            margin: 0 auto;
         }
     </style>
 </head>
