Reduce cat gif image size for bigger screen

--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
         }
 
         .gif-container img {
-            width: clamp(20vw, 30%, 40vw); /* Adjusted for better responsiveness */
-            height: auto;
-            max-width: 300px; /* Adjusted to make the GIF slightly smaller on PC screens */
-            margin: 0 auto;
-        }
+    width: clamp(15vw, 25%, 35vw); /* Adjusted for better responsiveness */
+    height: auto;
+    max-width: 250px; /* Adjusted to make the GIF smaller on PC screens */
+    margin: 0 auto;
+}
+
     </style>
 </head>
 <body>
