Adjust the clamp function size for h2 and p tag in section2

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             margin: 0;
             color: #fff;
             font-weight: bold;
-            letter-spacing: 4px;
+            /* letter-spacing: 4px; */
         }
 
         .section h1 span {
@@ -98,19 +98,23 @@
             margin-top: 20px;
         }
 
-        .gif-container img {
-    width: clamp(15vw, 25%, 35vw); /* Adjusted for better responsiveness */
+        
+
+
+.gif-container img {
+    width: clamp(15vw, 25%, 30vw); /* Adjusted for better responsiveness */
     height: auto;
-    max-width: 250px; /* Adjusted to make the GIF smaller on PC screens */
+    max-width: 200px; /* Adjusted to make the GIF smaller on PC screens */
     margin: 0 auto;
 }
+
 
     </style>
 </head>
 <body>
     <!-- Section 1 -->
     <div class="section">
-        <h1>Hey, I'm <span>Xplozion</span></h1>
+        <h1>Hey, I'm <span>Xplozion.</span></h1>
         <!-- Cat Image -->
         <img src="./cat.jpg" alt="Xplozion Cat" class="responsive-img">
         <div class="scroll-indicator" onclick="scrollToSection2()">
@@ -124,7 +128,7 @@
     <!-- Section 2 -->
     <div class="section2" id="section2">
         <h2 id="section2Text">I'm Learning Web Development!</h2>
-        <p>I’m learning web development with <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>, working to create great web applications. Follow along as I grow my skills and build something awesome.</p>
+        <p>I’m learning web development from <a href="https://www.theodinproject.com" target="_blank">The Odin Project</a>, working to create great web applications. Follow along as I grow my skills and build something awesome.</p>
         
         <!-- GIF Embed -->
         <div class="gif-container">
