--- a/index.html
+++ b/index.html
@@ -6,106 +6,110 @@
     <title>About Xplozion</title>
     <style>
         body, html {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #000;
-            color: #fff;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-            height: 100%;
-        }
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #000;
+    color: #fff;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    height: 100%;
+}
 
-        .section, .section2 {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            text-align: center;
-            padding: 0 20px;
-            background-color: #000;
-            position: relative;
-        }
+.section, .section2 {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 20px;
+    background-color: #000;
+    position: relative;
+}
 
-        .section h1 {
-            font-size: clamp(2rem, 4vw, 4rem); /* Adjusted for better responsiveness */
-            margin: 0;
-            color: #fff;
-            font-weight: bold;
-            /* letter-spacing: 4px; */
-        }
+.section h1 {
+    font-size: clamp(2rem, 4vw, 4rem); /* Adjusted for better responsiveness */
+    margin: 0;
+    color: #fff;
+    font-weight: bold;
+    /* letter-spacing: 4px; */
+}
 
-        .section h1 span {
-            color: skyblue;
-        }
+.section h1 span {
+    color: skyblue;
+}
 
-        .section img {
-            width: clamp(20vw, 30%, 40vw);
-            max-width: 200px;
-            height: auto;
-            border-radius: 50%;
-            margin-top: 30px;
-        }
+.section img {
+    width: clamp(20vw, 30%, 40vw);
+    max-width: 200px;
+    height: auto;
+    border-radius: 50%;
+    margin-top: 30px;
+}
 
-        .scroll-indicator {
-            margin-top: 20px;
-            cursor: pointer;
-        }
+.scroll-indicator {
+    margin-top: 20px;
+    cursor: pointer;
+}
 
-        .scroll-indicator svg {
-            width: clamp(30px, 5vw, 50px);
-            height: clamp(30px, 5vw, 50px);
-            fill: white;
-            transition: transform 0.3s ease;
-            margin-top: 20px;
-        }
+.scroll-indicator svg {
+    width: clamp(30px, 5vw, 50px);
+    height: clamp(30px, 5vw, 50px);
+    fill: white;
+    transition: transform 0.3s ease;
+    margin-top: 20px;
+}
 
-        .section2 h2 {
-            font-size: clamp(1.5rem, 4vw, 3rem); /* Adjusted for better responsiveness */
-            margin-bottom: 1rem;
-            color: skyblue;
-            text-align: center;
-            white-space: nowrap; /* Prevent text from wrapping */
-            overflow: hidden; /* Hide overflow text */
-            text-overflow: ellipsis; /* Add ellipsis if text overflows */
-        }
+.section2 h2 {
+    font-size: clamp(1.5rem, 4vw, 3rem); /* Adjusted for better responsiveness */
+    margin-bottom: 1rem;
+    color: skyblue;
+    text-align: center;
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflow text */
+    text-overflow: ellipsis; /* Add ellipsis if text overflows */
+}
 
-        .section2 p {
-            font-size: clamp(1rem, 2vw, 1.5rem); /* Adjusted for better responsiveness */
-            line-height: 1.6;
-            color: #aaa;
-            max-width: 800px;
-            text-align: center;
-            margin: 0 20px; /* Ensure padding on smaller screens */
-        }
+.section2 p {
+    font-size: clamp(1rem, 2vw, 1.5rem); /* Adjusted for better responsiveness */
+    line-height: 1.6;
+    color: #aaa;
+    max-width: 800px;
+    text-align: center;
+    margin: 0 20px; /* Ensure padding on smaller screens */
+}
 
-        .section2 a {
-            color: skyblue;
-            text-decoration: none;
-        }
+.section2 a {
+    color: skyblue;
+    text-decoration: none;
+}
 
-        .section2 a:hover {
-            text-decoration: underline;
-        }
+.section2 a:hover {
+    text-decoration: underline;
+}
 
-        .gif-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-
-        
-
+.gif-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+}
 
 .gif-container img {
     width: clamp(15vw, 25%, 30vw); /* Adjusted for better responsiveness */
     height: auto;
     max-width: 200px; /* Adjusted to make the GIF smaller on PC screens */
     margin: 0 auto;
+}
+
+/* Media query for mobile screens */
+@media (max-width: 600px) {
+    .section2 h2, .section2 p {
+        margin: 0 10px; /* Adjust the margin as needed */
+    }
 }
 
 
